# gold-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-bot.sh  build-glue.sh  build-wasm.sh  docker-compose.yml
.github/: .dive-ci
.github/workflows/: docker-compose.yml  general.yaml  glue.yaml
admin-panel/: Cargo.toml
admin-panel/examples/: admin_withdraw.rs  auction_bot.rs  delete_auctions.rs  filter_auction.rs  initialize_contract.rs  reallocate_pool.rs  reassign_withdraw.rs  thaw_auction.rs  verify_auction.rs
admin-panel/src/: cli_opts.rs  example_utils.rs  lib.rs
ci/: cargo-test-bpf.sh  rust-version.sh  solana-version.sh
client/: Cargo.toml
client/examples/: admin_withdraw.rs  auction_bot.rs  delete_auctions.rs  initialize_contract.rs  reallocate_pool.rs  reassign_withdraw.rs  thaw_auction.rs  verify_auction.rs
client/src/: auction_exists.rs  example_utils.rs  get_auction.rs  get_current_cycle.rs  get_top_bidder.rs  get_treasury.rs  is_id_unique.rs  lib.rs  try_find_master.rs  types.rs  utils.rs
contract/: Cargo.toml
contract/src/: assertions.rs  error.rs  frontend.rs  lib.rs  state.rs  utils.rs
contract/src/frontend/: mod.rs  types.rs
contract/src/instruction/: mod.rs
contract/src/instruction/factory/: admin_withdraw.rs  claim_funds.rs  claim_rewards.rs  close_auction_cycle.rs  delete_auction.rs  filter_auction.rs  freeze_auction.rs  initialize_auction.rs  initialize_contract.rs  mod.rs  modify_auction.rs  place_bid.rs  pool_cleanup.rs  reallocate_pool.rs  set_protocol_fee.rs  thaw_auction.rs  verify_auction.rs
contract/src/pda/: mod.rs
contract/src/processor/: admin_withdraw.rs  bid.rs  claim_funds.rs  claim_rewards.rs  close_auction_cycle.rs  delete_auction.rs  filter_auction.rs  freeze.rs  initialize_auction.rs  initialize_contract.rs  mod.rs  modify_auction.rs  pool_cleanup.rs  reallocate_pool.rs  set_protocol_fee.rs  thaw.rs  verify_auction.rs
contract/tests/: process_admin_withdraw.rs  process_bid.rs  process_claim_funds.rs  process_claim_rewards.rs  process_close_auction_cycle.rs  process_delete_auction.rs  process_filter_auction.rs  process_freeze.rs  process_freeze_thaw.rs  process_initialize_auction.rs  process_modify_auction.rs  process_pool_cleanup.rs  process_reallocate_pool.rs  process_set_protocol_fee.rs  process_tokens.rs  process_verify_auction.rs  test_factory.rs
contract/tests/fixtures/: metaplex_schema.rs
gold-bot/: Cargo.toml
gold-bot/src/: cli_opts.rs  cli_utils.rs  main.rs  pool_cache.rs
