[package]
name = "agsol-gold-admin-panel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agsol-gold-client = { path = "../client" }
agsol-gold-contract = { path = "../contract", features = ["client"] }
anyhow = "1"
solana-sdk = "1.9.0"
solana-client = "1.9.0"
structopt = "0.3"

[dev-dependencies]
env_logger = "0.9.0"
log = "0.4"
