[package]
name = "agsol-gold-client"
version = "0.0.0-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
Devnet = []
Mainnet = [] # default

[dependencies]
agsol-common = "0.2.0"
agsol-gold-contract = { path = "../contract", features = ["client"] }
agsol-wasm-client = { version = "0.0.1-alpha.5", features = ["wasm-factory"] }
anyhow = "1"
borsh = "0.9.0"
js-sys = "0.3"
agsol-token-metadata = { version = "0.0.0-alpha", features = ["no-entrypoint"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
