[package]
name = "agsol-gold-client"
version = "0.0.0-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
mainnet = []

[dependencies]
agsol-gold-contract = { path = "../contract", features = ["client"] }
agsol-token-metadata = { version = "0.0.0-alpha", features = ["no-entrypoint"] }
agsol-wasm-client = { version = "0.0.1-alpha.5", features = ["wasm-factory"] }
anyhow = "1"
futures = "0.3.21"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
