[package]
name = "agsol-gold-contract"
version = "0.1.0"
edition = "2021"

[lib]
name = "agsol_gold_contract"
crate-type = ["cdylib", "lib"]

[features]
test-bpf = ["client", "num-derive", "num-traits"]
client = []

[dependencies]
agsol-borsh-schema = "0.0.1"
agsol-common = { version = "0.0.1", features = ["derive"] }
borsh = "0.9.0"
borsh-derive = "0.9.0"
metaplex-token-metadata = { git = "https://github.com/zgendao/metaplex", branch = "experiments", features = ["no-entrypoint"] }
num-derive = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }
solana-program = "1.9.0"
spl-token = { git = "https://github.com/zgendao/solana-program-library.git", features = ["no-entrypoint"] }

[dev-dependencies]
agsol-testbench = { git = "https://github.com/agoraxyz/agora-solana.git" }
solana-sdk = "1.9.0"
