[package]
name = "agsol-gold-contract"
version = "0.0.0-alpha"
edition = "2021"

[lib]
name = "agsol_gold_contract"
crate-type = ["cdylib", "lib"]

[features]
test-bpf = ["client", "num-derive", "num-traits"]
client = []

[dependencies]
agsol-borsh-schema = "0.0.1"
agsol-common = { version = "0.2.0", features = ["derive"] }
borsh = "0.9.0"
borsh-derive = "0.9.0"
metaplex-token-metadata = { git = "https://github.com/zgendao/metaplex", branch = "spl-bump", features = ["no-entrypoint"] }
num-derive = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }
solana-program = "1.9.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

[dev-dependencies]
agsol-testbench = "0.0.1-alpha.1"
solana-sdk = "1.9.0"
