[package]
name = "agsol-gold-contract"
version = "0.0.0-alpha"
edition = "2021"
license = "MIT"
description = "gold.xyz smart contract"
authors = ["Agora DAO <mark@gold.xyz>"]
repository = "https://github.com/agoraxyz/gold-rust"

[lib]
name = "agsol_gold_contract"
crate-type = ["cdylib", "lib"]

[features]
test-bpf = ["client", "num-derive", "num-traits"]
client = []

[dependencies]
agsol-borsh-schema = "0.0.1"
agsol-common = { version = "0.2.0", features = ["derive"] }
borsh = "0.9.0"
borsh-derive = "0.9.0"
agsol-token-metadata = { version = "0.0.0-alpha", features = ["no-entrypoint"] }
num-derive = { version = "0.3", optional = true }
num-traits = { version = "0.2", optional = true }
solana-program = "1.9.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

[dev-dependencies]
agsol-testbench = "0.0.1-alpha.2"
solana-sdk = "1.9.0"
