[package]
name = "agsol-gold-bot"
version = "0.0.0-alpha"
edition = "2021"

[dependencies]
agsol-gold-contract = { path = "../contract", features = ["client"] }
agsol-wasm-client = { path = "../../agora-solana/agsol-wasm-client" }
anyhow = "1"
env_logger = "0.9.0"
log = "0.4"
solana-sdk = "1.9.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
