[package]
name = "agsol-gold-bot"
version = "0.0.0-alpha"
edition = "2021"
license = "MIT"
description = "Auction cycle closing bot for the gold.xyz platform"
authors = ["Agora DAO <mark@gold.xyz>"]
repository = "https://github.com/agoraxyz/gold-rust"

[dependencies]
agsol-gold-contract = { path = "../contract", features = ["client"], version = "0.0.0-alpha" }
agsol-wasm-client = "0.0.1-alpha.2"
anyhow = "1"
env_logger = "0.9.0"
log = "0.4"
solana-sdk = "1.9.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
